--- a/src/components/Container/Container.module.css
+++ b/src/components/Container/Container.module.css
@@ -2,5 +2,7 @@
   max-width: 1170px;
   margin-left: auto;
   margin-right: auto;
-  padding: 15px;
+  margin-bottom: 30px;
+  padding-left: 20px;
+  padding-right: 20px;
 }
