--- a/src/index.css
+++ b/src/index.css
@@ -1,15 +1,35 @@
-@import-normalize; /* bring in normalize.css styles */
+:root {
+  --primary-text: 'Segoe UI';
+  --primary-font-size: 18px;
+  --primary-font-weight: 500;
+  --primary-line-height: 30px;
+  --primary-letter-spacing: 0.02em;
 
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  --primary-text-color: black;
+  --secondary-text-color: grey;
+  --accent-color: rgb(229, 103, 49);
+
+  --primary-background-color: rgb(126, 228, 158);
+  --secondary-background-color: rgb(105, 237, 105);
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  font-family: var(--primary-text), -apple-system, BlinkMacSystemFont, 'Roboto',
+    'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+  font-size: var(--primary-font-size);
+  font-weight: var(--primary-font-weight);
+  line-height: var(--primary-line-height);
+  letter-spacing: var(--primary-letter-spacing);
+  color: var(--primary-text-color);
+  background-color: var(--primary-background-color);
+}
+
+h1,
+h2,
+ul {
+  margin-top: 0;
+  margin-bottom: 0;
+  padding-left: 0;
+  list-style: none;
 }
